update docs usage commands style.

--- a/style/docs/usageCommand.css
+++ b/style/docs/usageCommand.css
@@ -33,6 +33,8 @@ header {
     .content {
         width: 100%;
         margin: 0 0 0 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .content div {
